fix: fix the bug of wrong header color in dark mode by editing antd stylee

--- a/src/styles/antd-customized.css
+++ b/src/styles/antd-customized.css
@@ -4,9 +4,11 @@
 }
 
 /* Header */
-/* .ant-menu-horizontal {
+.ant-menu-horizontal {
+  background-color: var(--primary-bg-color);
   border-bottom: 0px !important
-} */
+}
+
 
 .ant-divider,
 .ant-divider::before,
